--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,51 @@
+body {
+    text-align: center;
+}
+
 .hidden {
     display: none;
+}
+
+.bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+#clock {
+    font-size: 50px;
+}
+
+#greeting {
+    font-size: 70px;
+}
+
+#todo-form input {
+    width: 400px;
+}
+
+ul {
+    width: 500px;
+    background-color: mintcream;
+    border-radius: 10px;
+    opacity: 0.8;
+}
+
+li {
+    list-style: none;
+}
+
+#quote {
+    width: 500px;
+    background-color: mintcream;
+    border-radius: 10px;
+    opacity: 0.8;
+    margin: 0 auto;
+}
+
+#quote span {
+    display: block;
 }
